Update readme, add CLAUDE.md, update grade, update cache control header for thumbnail